--- a/ToeicWeb/Views/Shared/_Navbar.cshtml
+++ b/ToeicWeb/Views/Shared/_Navbar.cshtml
@@ -25,6 +25,11 @@
                         <i class="bi bi-book fst-normal"> Grammar</i>
                     </a>
                 </li>
+                <li class="nav-item m-sm-2 fs-6 fw-bold text-d">
+                    <a href="#" class="nav-link nav-linkH" id="articleLink">
+                        <i class="bi bi-layers fst-normal"> Article</i>
+                    </a>
+                </li>
                 @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
                 {
                     <li class="nav-item m-sm-2 fw-bold text-d">
