--- a/ToeicWeb/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Views/Shared/_Layout.cshtml
@@ -6,11 +6,9 @@
     <title>@ViewData["Title"] TOEIC</title>
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/customer/lib/bootstrap/dist/css/bootstrap.css" />
-    @* <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" /> *@
-    <link rel="stylesheet" href="~/ToeicWeb.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="//cdn.datatables.net/2.1.4/css/dataTables.dataTables.min.css" />
-
+<link href="~/customer/css/site.css" rel="stylesheet" />
 </head>
 <body>
    <header>
