--- a/ToeicWeb/Areas/Customer/Views/Article/ArticleDetail.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Article/ArticleDetail.cshtml
@@ -1,6 +1,12 @@
-﻿<div class="container py-4 article-container">
-    <h1 class="fw-bold">iPhone 15 tops global bestselling list</h1>
-    <img src="/customer/images/images.jpg" alt="iPhone 15" class="article-image mt-3 mb-4">
-    <p>The iPhone 15 was the world's top selling smartphone in 2024 as Apple and Samsung monopolized the global top 10 rankings for a third straight year.</p>
-    <p>According to Counterpoint Research, Apple’s standard iPhone, Pro Max and Pro models dominated the market.</p>
+﻿@model ArticleVM
+
+
+<div class="container py-4 article-container">
+    <h1 class="fw-bold">@Model.Ten_bai</h1>  <!-- Tiêu đề bài viết -->
+    <img src="~/@Model.ImageUrl" alt="@Model.Ten_bai" class="article-image mt-3 mb-4"> <!-- Hình ảnh -->
+   
+    <p>
+        @Html.Raw(Model.Noi_dung)
+    </p>
+
 </div>
