--- a/ToeicWeb/Areas/Customer/Views/Article/Index.cshtml
+++ b/ToeicWeb/Areas/Customer/Views/Article/Index.cshtml
@@ -11,7 +11,7 @@
                         <h5 class="fw-bold">@Model[i].Ten_bai</h5>
                             <p class="text-muted mb-0">Ngày cập nhật @Model[i].UpdatedAt.ToString("dd/MM/yyyy")</p>
 
-                        <p>@Model[i].Description</p>
+                            <p class="opacity-50">@Model[i].Description</p>
                     </div>
                 </div>
             </a>
