--- a/ToeicWeb/Views/Shared/_Layout.cshtml
+++ b/ToeicWeb/Views/Shared/_Layout.cshtml
@@ -32,6 +32,8 @@
         </main>
     </div>
 
+    @await Html.PartialAsync("_ChatBot")
+
   
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
